2009-06-15  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.82]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-06-13  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-main.c: Minor documentation fixes.

2009-06-13  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt:
	* hildon/hildon-defines.h: Document the defines, organize them,
	and mark deprecations as such.

	Fixes: MB#4463 (Hildon size #defines are undocumented)

2009-06-13  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-animation-actor.c:
	* hildon/hildon-app-menu.c:
	* hildon/hildon-button.c:
	* hildon/hildon-date-editor.c:
	* hildon/hildon-dialog.c:
	* hildon/hildon-edit-toolbar.c:
	* hildon/hildon-entry.c:
	* hildon/hildon-program.c:
	* hildon/hildon-remote-texture.c:
	* hildon/hildon-stackable-window.c:
	* hildon/hildon-text-view.c:
	* hildon/hildon-touch-selector.c:
	* hildon/hildon-window-stack.c:
	* hildon/hildon-window.c:

	Remove redundant "represents" wording from most of the documentation.

	Fixes: MB#4554 (Documentation: Annoying "represents" phrasing.)

2009-06-12  Alberto Garcia  <agarcia@igalia.com>

	* po/POTFILES.in
	* doc/Makefile.am
	* hildon/Makefile.am
	* hildon/hildon-banner-private.h
	* hildon/hildon-banner.c:
	Move HildonBannerPrivate to hildon-banner.c and remove
	hildon-banner-private.h
	Use a bit field to store private booleans.

2009-06-12  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c (hildon_app_menu_map):
	Don't install a new idle function if there's already one
	installed.

	Fixes: NB#122254

2009-06-11  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-window.c (hildon_window_toggle_gtk_menu)
	(+legacy_menu_realized, +legacy_menu_unmapped)
	(+set_legacy_menu_type):
	Set the _HILDON_WM_WINDOW_TYPE property to legacy Gtk app menus so
	they can be identified by the window manager.

	Fixes: NB#101437 (Invoking CSM on the left side of page area is