@@ -1,3 +1,11 @@
+2009-06-15  Alberto Garcia  <agarcia@igalia.com>
+
+	* hildon/hildon-app-menu.c
+	(hildon_app_menu_apply_style, hildon_app_menu_class_init):
+	New style property to set the size of the group of filter buttons.
+
+	Fixes: NB#122033 (Filter buttons in view menus incorrectly sized)
+
 2009-06-15  Claudio Saavedra  <csaavedra@igalia.com>
 
 	[Release 2.1.82]
